--- a/theory/s3/main.tex
+++ b/theory/s3/main.tex
@@ -336,7 +336,7 @@ Workloads}
   загрузкой процессора и наличием интерферирующих
   рабочих нагрузок. В среде Kubernetes Minikube LAVD
   продемонстрировал улучшение среднего времени оборота по сравнению
-  с EEVDF в диапазоне от 6\% до 81\%, а улучшение 99-го перцентиля (tail
+  с EEVDF в диапазоне от 6\% до 81\%, а улучшение 99-го процентиля (tail
   latency) достигало 90\%. Однако, scx\_simple показал удивительно
   хорошие результаты, превзойдя LAVD,
   когда количество интерферирующих рабочих нагрузок было низким.
@@ -351,7 +351,7 @@ Workloads}
   проводить эксперименты и оптимизировать код,
   делает ее перспективным инструментом для адаптации планирования ЦП
   к требованиям, специфичным для домена telco.
-  Кроме того, попытки оптимизировать параметры LAVD, такие как
+  Кроме того, попытки оптимизировать параметры LAVD, такие, как
   минимальный и максимальный временной срез, не привели к
   значительным улучшениям по сравнению с настройками по умолчанию,
   что позволяет предположить, что LAVD уже хорошо
@@ -362,7 +362,7 @@ Workloads}
   и разнообразного набора трасс или непосредственного использования
   трасс для управления выполнением вместо статистических
   распределений. Также рекомендуется расширить анализ, включив
-  дополнительные метрики, такие как время ожидания
+  дополнительные метрики, такие, как время ожидания
   и количество переключений контекста, а также провести оценку
   планировщиков в распределенном кластере Kubernetes,
   чтобы выявить потенциальные узкие места, которые могут не
@@ -373,14 +373,14 @@ Workloads}
 a Learning-Based Linux Scheduler}
 \begin{quote}
   Проблема обеспечения полноты данных о происхождении (provenance)
-  критически важна для трассируемости действий системы,
+  критически важна для аудита действий системы,
   что необходимо для анализа первопричин угроз безопасности и их
   последствий. Системы сбора данных о происхождении должны
   функционировать как эталонный монитор (reference monitor),
   гарантируя полный захват всех системных событий, чтобы
   ведение журнала нельзя было обойти. Однако, современные системы
   сбора данных сталкиваются с серьезной проблемой,
-  известной как «угроза суперпродюсера» (super producer threat), при
+  известной как "угроза суперпродюсера" (super producer threat), при
   которой чрезмерная генерация событий может перегрузить
   систему, вынуждая ее отбрасывать критически важные для безопасности
   записи, что позволяет злоумышленнику скрыть свои
@@ -389,7 +389,7 @@ a Learning-Based Linux Scheduler}
 
   Существующие решения и подходы сталкиваются с серьезными
   ограничениями при противодействии угрозе суперпродюсера. Традиционные
-  планировщики Linux, такие как CFS и EEVDF, разработаны для
+  планировщики Linux, такие, как CFS и EEVDF, разработаны для
   достижения общих целей производительности, таких как
   пропускная способность, справедливость и задержка, но им не хватает
   понимания уникальных требований полноты данных
@@ -410,11 +410,11 @@ a Learning-Based Linux Scheduler}
   что планировщик ядра может решить проблему несвоевременного
   потребления генерируемых событий, которое приводит к переполнению
   буфера и потере данных, путем выделения достаточных ресурсов
-  системе происхождения. Разработка Aegis преследует три основные
+  системе происхождения. Aegis преследует три основные
   цели: полнота (захват всех событий даже при экстремальных
   нагрузках), эффективность (поддержание или улучшение производительности
   системы) и справедливость (сбалансированное распределение ресурсов
-  для предотвращения "голодания" задач).
+  для предотвращения старвации задач).
 
   Архитектура Aegis основана на двухслойном подходе, где первый слой
   создает основу планирования, а второй слой
@@ -429,9 +429,9 @@ a Learning-Based Linux Scheduler}
   выполнения задачи в ней, превышает установленное время ожидания,
   что обеспечивает строгую политику выделения ресурсов
   и предотвращает перегрузку. Aegis также обеспечивает
-  справедливость, потребляя наиболее «голодные» непервичные
-  очереди (те, которые ждали дольше всего), гарантируя
-  пропорциональное распределение ресурсов и предотвращая "голодание"
+  справедливость, потребляя непервичные очереди с наибольшим
+  показателем (весом) старвации (те, которые ждали дольше всего), гарантируя
+  пропорциональное распределение ресурсов и предотвращая старвацию
   задач.
 
   Ключевым элементом Aegis является использование обучения с
@@ -445,7 +445,7 @@ a Learning-Based Linux Scheduler}
   Процесс обучения управляется двойным механизмом вознаграждения:
   вознаграждение за происхождение ($r_c$) наказывает за потерю событий
   для обеспечения полноты, а вознаграждение за утилизацию ($r_p$)
-  минимизирует простой ЦП для повышения общей эффективности.
+  минимизирует простой процессора для повышения общей эффективности.
   Aegis реализован в пространстве ядра Linux с использованием подсистемы
   eBPF и фреймворка sched\_ext.
 
@@ -458,8 +458,8 @@ a Learning-Based Linux Scheduler}
   того, Aegis не только предотвращает потерю событий,
   но и обеспечивает высокую производительность, в среднем улучшая
   время выполнения по сравнению с EEVDF, LAVD и Rusty.
-  Общие вычислительные затраты, связанные с планированием (включая
-  вывод нейронной сети), остаются низкими: в типичных сценариях
+  Общие вычислительные затраты, связанные с планированием,
+  остаются низкими: в типичных сценариях
   они составляют менее 0.5\%, а в самых требовательных -- около
   2.44\%, благодаря использованию дельта-функции для пропуска
   ненужных решений планирования.
@@ -481,8 +481,8 @@ Agent as a Learned Router for Expert Policies}
   серьезной проблемой: единая, статичная политика
   не может обеспечить оптимальную производительность в условиях
   разнообразия и динамичности нагрузок, характерных
-  для современных систем. Рост гетерогенного оборудования (например,
-  P/E-ядер) и разнообразных архитектур
+  для современных систем. Рост числа гетерогенного оборудования
+  (Intel Hybrid CPU) и разнообразных архитектур
   приложений (микросервисы, интерактивные задачи, пакетная обработка)
   обострил фундаментальные компромиссы между
   справедливостью, пропускной способностью и задержкой. В ответ на
@@ -491,75 +491,81 @@ Agent as a Learned Router for Expert Policies}
   специализированных планировщиков вместо проектирования единого,
   монолитного решения.
 
-  Эта философия реализована в виде Адаптивного Агента Планирования
+  Эта философия реализована в виде адаптивного агента планирования\\
   (Adaptive Scheduling Agent, ASA),
   который представляет собой легковесную структуру, выступающую в
-  роли интеллектуального маршрутизатора для "экспертных"
-  политик планирования. ASA разработан на основе расширяемого интерфейса
-  планировщика Linux, sched\_ext. Архитектура ASA декомпозирует
-  сложную задачу планирования на две более управляемые
-  подзадачи: распознавание шаблона рабочей нагрузки и сопоставление
-  политики. Это позволяет ASA интеллектуально
-  подбирать наиболее подходящую политику из своего портфеля экспертов
-  во время выполнения.
+  роли интеллектуального маршрутизатора для специализированных
+  политик планирования. ASA разработан на основе инфраструктуры
+  sched\_ext.
+
+  Архитектура ASA декомпозирует сложную задачу планирования
+  на две более простые подзадачи
+  \begin{itemize}
+    \item распознавание шаблона рабочей нагрузки
+    \item сопоставление политики
+  \end{itemize}
+  Это позволяет ASA во время выполнения выбирать наиболее подходящую политику
+  из набора доступных экспертов.
 
   В основе интеллекта ASA лежит цикл восприятия, решения и действия.
-  Модуль Восприятия (Perception module) непрерывно
+  Модуль восприятия (Perception module) непрерывно
   отслеживает метрики времени выполнения, такие как использование
-  CPU, активность I/O и сетевой трафик, собирая данные
-  из различных источников, включая программы eBPF и файловую систему
-  procfs. Модуль Решения (Decision module) использует обученную
+  процессора, активность ввода/вывода и сетевой трафик, собирая данные
+  из различных источников, включая eBPF интерфейсы и файловую систему
+  procfs. Модуль решения (Decision module) использует обученную
   модель машинного обучения (классификатор на основе ансамбля,
   преимущественно XGBoost) для распознавания текущего шаблона нагрузки.
   Для обеспечения стабильности решений в динамической среде
-  применяется алгоритм Взвешенного по Времени Вероятностного Голосования
+  применяется алгоритм взвешенного по времени вероятностного голосования
   (Time-Weighted Probability Voting), который использует механизм
   голосования с экспоненциальным затуханием для фильтрации
-  кратковременного системного шума. Модуль Действия (Action module)
+  кратковременного системного шума. Модуль действия (Action module)
   затем выполняет динамическое переключение на
   выбранный оптимальный планировщик через фреймворк sched\_ext.
 
   Развертывание ASA включает комплексный трехэтапный автономный
   процесс подготовки (Offline Prepare Pipeline),
-  который систематически создает надежного агента планирования. Он
-  начинается с Прототипного Обучения (Prototype Learning)
+  который создает агента планирования. Он
+  начинается с прототипного обучения (Prototype Learning)
   для создания базовой модели распознавания и первичного
-  сопоставления планировщиков, за которым следует Динамическая Калибровка
-  Накладных Расходов (Dynamic Overhead Calibration), имитирующая
-  стоимость переключения планировщиков. Завершающий этап, Обучение
-  Модели Обобщения (Generalization Model Training), позволяет ASA
-  уточнить свои модели в реальной среде. Для оценки эффективности авторы
-  разработали Критерий Оценки, Ориентированный на Пользовательский
-  Опыт (User Experience Oriented Evaluation Criteria), который измеряет
+  сопоставления планировщиков, за которым следует динамическая калибровка
+  косвенных затрат (Dynamic Overhead Calibration), имитирующая
+  стоимость переключения планировщиков. Завершающий этап: обучение
+  модели обобщения\\ (Generalization Model Training), позволяет ASA
+  уточнить свои модели в реальной среде.
+
+  Для оценки эффективности авторы
+  разработали критерий оценки, ориентированный на пользовательский
+  опыт (User Experience Oriented Evaluation Criteria), который измеряет
   производительность на основе метрик, напрямую влияющих на
-  восприятие пользователя (например, задержка взаимодействия и плавность UI),
+  восприятие пользователя (например, задержка взаимодействия с
+  пользовательскими интерфейсами, их плавность),
   смещая цель оптимизации от системной эффективности к оптимизации
-  пользовательского опыта. Этот критерий отражает нелинейную природу
-  человеческого восприятия, выделяя "Зону Наилучшего Восприятия"
+  пользовательского опыта. Этот критерий отражает сложную природу
+  человеческого восприятия, выделяя зону наилучшего восприятия
   ("Sweet Spot Region").
 
   Комплексная оценка подтвердила, что парадигма динамического выбора
   ASA превосходит статическую оптимизацию.
-  ASA стабильно превосходит стандартный планировщик Linux (EEVDF), показывая
+  ASA стабильно превосходит EEVDF, показывая
   лучшие результаты в 86.4\% тестовых сценариев. Выбранные ASA
   политики являются близкими к оптимальным, входя в тройку
-  лучших планировщиков в 78.9\% всех сценариев. В некоторых сценариях
-  со смешанными нагрузками ASA даже превосходит
-  "Статический Оракул", динамически переключая политики внутри задачи
-  для отслеживания мгновенного оптимума.
+  лучших планировщиков в 78.9\% всех сценариев.
 
   Агент также продемонстрировал сильную способность к обобщению,
   поддерживая или даже улучшая производительность
-  на новых, ранее невиденных аппаратных платформах.
+  на новых, ранее неизвестных аппаратных платформах (пример:
+  обучение на архитектуре x86\_64, эксплуатация на arm).
 
-  Практичность ASA подтверждается минимальными накладными расходами: агент
-  потребляет в среднем всего 1.45\% одного ядра CPU и 297 МБ памяти.
+  Практичность ASA подтверждается довольно низкими косвенными затратами
+  для масштаба системы: агент потребляет в среднем всего 1.45\% одного
+  ядра процессора и 297 магабайт памяти.
   Хотя потолок производительности ASA определяется качеством
   и разнообразием портфеля экспертных планировщиков, это также
   является преимуществом, поскольку позволяет масштабировать
   улучшения путем интеграции новых, более продвинутых планировщиков,
-  разработанных сообществом. В целом, Адаптивный Агент Планирования
-  предлагает жизнеспособный технический путь для создания следующего
+  разработанных сообществом. В целом, ASA предлагает жизнеспособный
+  технический путь для создания следующего
   поколения интеллектуальных, адаптивных планировщиков операционных систем.
 \end{quote}
 
@@ -567,10 +573,10 @@ Agent as a Learned Router for Expert Policies}
 \section{Задачи}
 \begin{quote}
   \begin{itemize}
-    \item Исследовать диссертацию [7]
-    \item Реализовать в соответствии с описанным алгоритмом планировщик
-      EEVDF используя sched\_ext
-    \item Провести сравнение задержки между алгоритмами
+    \item Исследовать диссертацию про алгоритм EEVDF [7]
+    \item Реализовать в соответствии с алгоритмом планировщик
+      используя sched\_ext
+      %\item Провести сравнение задержки между алгоритмами
   \end{itemize}
 \end{quote}
 
@@ -605,253 +611,223 @@ Agent as a Learned Router for Expert Policies}
   (VE) и виртуального крайнего срока (VD), вычисляемых следующим образом:
 
   VE = max(VE\_previous, V\_now - slice), где V\_now -- глобальное
-  виртуальное время, а slice -- временая квота задачи 
+  виртуальное время, а slice -- временная квота задачи
   (упомянутый ранее scx\_slice).
 
-  VD = VE + (slice / weight, масштабируется таким образом, чтобы
-  задачи с более высоким весом (более высоким приоритетом) получали
-  более короткие эффективные сроки.
+  VD = VE + (slice / weight), масштабируется таким образом, чтобы
+    задачи с более высоким весом (более высоким приоритетом) получали
+    более короткие эффективные сроки.
 
-  Задачи распределяются на основе самого раннего VD, что способствует
-  справедливости: более ресурсоемкие задачи потребляют больше
-  виртуального времени, но соответственно наказываются. Это
-  предотвращает бесконечную задержку задач с низким приоритетом, что
-  является распространенной проблемой в других алгоритмах
-  справедливого распределения.
-  
-  В моей реализации я поддерживаю глобальный контекст (eevdf\_ctx),
-  отслеживающий vtime\_now (текущее виртуальное время) и total\_weight (сумма
-  весов всех задач). Общая очередь диспетчеризации dsq хранит задачи,
-  упорядоченные по их виртуальному времени VD, используя встроенную
-  в sched\_ext функцию вставки с упорядочением по виртуальному времени
-  (scx\_bpf\_dsq\_insert\_vtime()).
-\end{quote}
+    Задачи распределяются на основе самого раннего VD, что способствует
+    справедливости: более ресурсоемкие задачи потребляют больше
+    виртуального времени, но соответственно наказываются. Это
+    предотвращает бесконечную задержку задач с низким приоритетом, что
+    является распространенной проблемой в других алгоритмах
+    справедливого распределения.
 
-\section{Подробности реализации}
-\begin{quote}
-  Инициализация и глобальное состояние:
-  Мы начинаем с определения карты BPF для глобальных данных (global\_data) для
-  хранения контекста EEVDF. Карта статистики для каждого ЦП отслеживает такие
-  метрики, как выбор незадействованных ЦП и добавление задач в очередь для
-  отладки. Общая DSQ (ID 0) создается во время инициализации
-  (eevdf\_init), обеспечивая единую упорядоченную очередь для всех задач.
-  Выбор ЦП (eevdf\_select\_cpu):
-  Когда задача просыпается, мы используем выбор ЦП по умолчанию из
-  sched\_ext, но проверяем наличие незадействованных ядер. Если
-  обнаруживается свободный процессор, мы увеличиваем статистику и
-  добавляем задачу в локальную очередь задач (DSQ) с использованием
-  среза по умолчанию — оптимизируя выполнение для немедленного
-  запуска и уменьшая накладные расходы на миграцию.
-  Постановка задач в очередь (eevdf\_enqueue):
-  Здесь происходит волшебство EEVDF. Мы получаем глобальный контекст,
-  ограничиваем
-  виртуальное допустимое время (VE) задачи, чтобы предотвратить отрицательные
-  задержки, и вычисляем виртуальный крайний срок (VD) как VE + (срез * SCALE /
-  вес). Задача добавляется в общую очередь задач (DSQ) с
-  использованием семантики,
-  упорядоченной по виртуальному времени
-  (scx\_bpf\_dsq\_insert\_vtime), обеспечивая порядок «сначала самый
-  ранний крайний срок». Коэффициент SCALE (100) обеспечивает точность
-  с фиксированной запятой для дробных вычислений.
+    В моей реализации я поддерживаю глобальный контекст (eevdf\_ctx),
+    отслеживающий vtime\_now (текущее виртуальное время) и total\_weight (сумма
+    весов всех задач). Общая очередь диспетчеризации dsq хранит задачи,
+    упорядоченные по их виртуальному времени VD, используя встроенную
+    в sched\_ext функцию вставки с упорядочением по виртуальному времени
+    (scx\_bpf\_dsq\_insert\_vtime()).
+  \end{quote}
 
-  Диспетчеризация задач (eevdf\_dispatch):
-  Здесь царит простота: мы перемещаем задачи из общей очереди DSQ в
-  локальную очередь на текущем ЦП, позволяя ядру выбирать следующую
-  готовую к выполнению задачу на основе предварительно упорядоченного
-  виртуального времени (VD).
-  Хуки жизненного цикла задачи:
-  Начало выполнения (eevdf\_running): продвижение глобального
-  виртуального времени, если виртуальное время задачи превышает его,
-  обеспечивая монотонный прогресс.
-  Остановка (eevdf\_stopping): обновление виртуального времени задачи
-  путем добавления потребленного времени, масштабированного по весу,
-  с учетом фактического времени выполнения.
-  Включение/отключение (eevdf\_enable/eevdf\_disable): корректировка
-  total\_weight при входе или выходе задач из планировщика,
-  поддерживая точное глобальное состояние.
-  Изменение веса (eevdf\_set\_weight): динамическая корректировка
-  виртуального времени для сохранения задержки (разницы между
-  глобальным виртуальным временем и виртуальным временем задачи) при
-  изменениях веса. Это включает пропорциональное масштабирование во
-  избежание несправедливых скачков приоритета.
+  \section{Подробности реализации}
+  \begin{quote}
+    Изначально определяется карта eBPF (eBPF Maps) для глобальных
+    данных (global\_data) для хранения контекста EEVDF.
+    Также определяется карта статистики для каждого процессора,
+    которая отслеживает метрики: количество незадействованных
+    ядер и количество задач в очереди.
 
-  Код избегает сложных структур данных, полагаясь на примитивы DSQ из
-  sched\_ext для повышения эффективности. Обработка ошибок
-  минимальна, с ранним возвратом при сбоях поиска в карте, что
-  обеспечивает приоритет надежности в контексте ядра.
-  Тестирование и проверка
-  На практике этот планировщик «просто работает» — задачам
-  справедливо выделяется процессорное время пропорционально их весам,
-  с гарантией низкой задержки для интерактивных рабочих нагрузок.
-  Счетчики статистики показывают эффективное использование процессора
-  в режиме ожидания и закономерности постановки задач в очередь.
-  Например, при смешанных нагрузках (например, задачи, интенсивно
-    использующие процессор, и задачи, интенсивно использующие
-  ввод-вывод) EEVDF превосходит CFS по показателям задержки в конце
-  очереди, поскольку виртуальные крайние сроки предотвращают
-  чрезмерное использование ресурсов.
+    Общая очередь dsq (id 0) создается во время инициализации
+    (eevdf\_init).
 
-  Будущие улучшения и соображения
-  Хотя этот прототип отражает суть EEVDF, существует множество возможностей для
-  его усовершенствования: виртуальное время для каждого ЦП с учетом
-  NUMA-архитектуры, адаптивное разделение на сегменты для переменных рабочих
-  нагрузок или интеграция с энергоэффективным планированием. Гибкость
-  sched\_ext делает эти расширения простыми.
-  В заключение, реализация EEVDF через sched\_ext демонстрирует
-  возможности BPF в расширяемости ядра — превращая теоретические
-  алгоритмы в развертываемые решения с минимальными накладными
-  расходами. Эта работа не только решает исходную задачу, но и
-  открывает двери для вклада сообщества, потенциально влияя на
-  планирование в Linux. Полный код и инструкции по развертыванию см.
-  в репозитории [ссылка, если доступна]. Если вы экспериментируете с
-  пользовательскими планировщиками, EEVDF предлагает привлекательную
-  отправную точку — справедливую, эффективную и элегантно простую.
-\end{quote}
+    Выбор ядра процессора (eevdf\_select\_cpu):
+    когда задача становится активной, используется выбор ядра по умолчанию из
+    sched\_ext и проверяем наличие незадействованных ядер. Если обнаруживается
+    свободное ядро, тогда увеличиваем статистику и добавляем задачу в
+    локальную очередь задач (dsq) с использованием
+    среза (scx\_slice) по умолчанию -- оптимизируя выполнение для немедленного
+    запуска и уменьшая косвенные затраты на миграцию.
 
-\section{Итоги}
-\begin{quote}
-\end{quote}
+    Постановка задач в очередь (eevdf\_enqueue):
+    считывается глобальный контекст, ограничиваем
+    виртуальное допустимое время VE задачи, вычисляем виртуальный крайний
+    срок VD как VE + (slice * SCALE / weight).
+    Задача добавляется в общую очередь задач dsq с использованием
+    упорядочивания по виртуальному времени (scx\_bpf\_dsq\_insert\_vtime),
+    обеспечивая порядок сначала самый ранний крайний срок.
+    Коэффициент SCALE (100) позволяет вычислять дробные коэффициенты
+    через целочисленную арифметику.
 
-%\chapter{Матмодель задачи}
+    Диспетчеризация задач (eevdf\_dispatch): задачи перемещаются из общей
+    очереди dsq в локальную очередь на текущем ядре, позволяя ядру
+    выбирать следующую готовую к выполнению задачу на основе
+    предварительно упорядоченного виртуального времени VD.
 
-%\chapter{Дальнейшие планы}
+    Начало выполнения (eevdf\_running): продвигаем глобальное
+    виртуальное время, если виртуальное время задачи превышает его.
 
-\chapter*{Заключение}
-\begin{quote}
-  \quad В данной работе были рассмотрены продвинутые алгортмы планирования.
-  Были описаны наиболее актуальные решения, используемые для задач планирования
-  в современных операционных системах, такие как CFS/EEVDF и sched\_ext.
-  Продолжающееся развитие данной области показывает, что решаемые проблемы
-  актуальны и востребованны.
+    \newpage
+    Остановка (eevdf\_stopping): обновление виртуального времени задачи
+    путем добавления использованного задачей времени, масштабированного
+    по весу, с учетом фактического времени выполнения.
 
-  \quad В работе преднамеренно было опущено обсуждение важности разработки
-  более эффективных планировщиков в тех местах, где это допустимо в рамках
-  формата отчета о научно-исследовательской работе. Это сделано по следующим
-  причинам: во-первых, с момента публикации [1] не произошло качественно новых
-  изменений в оценке значимости рассматриваемой темы -- она остаётся
-  исключительно
-  актуальной, и повторение ранее изложенного не представляется целесообразным;
-  во-вторых, данную работу лучше всего рассматривать как логичное
-  продолжение ранее
-  проведённого исследования, поэтому внимание к важности целесообразно уделить
-  именно в заключении.
+    Включение/отключение (eevdf\_enable/eevdf\_disable):
+    корректировка веса\\ total\_weight при входе или выходе
+    задач из планировщика. Обеспечивает поддержку глобального состояния.
 
-  \quad Разработка более эффективных алгоритмов планирования имеет ключевое
-  значение в условиях постоянно растущих требований к производительности
-  вычислительных систем. Современные задачи, такие как обеспечение предсказуемой
-  задержки, адаптация к разнородным нагрузкам, энергоэффективность, а
-  также гетерогенное устройство наиболее современных вычислительных машин
-  требуют всё более точных и адаптивных решений. Поэтому исследования в этой
-  области способствуют не только улучшению существующих реализаций,
-  но и открывают путь к созданию новых, более универсальных и
-  надёжных планировщиков.
+    Изменение веса (eevdf\_set\_weight): динамическая корректировка
+    виртуального времени для сохранения задержки (разницы между
+    глобальным виртуальным временем и виртуальным временем задачи) при
+    изменениях веса. Это свойство обеспечивает пропорциональное масштабирование
+    для избежания несправедливых скачков приоритета.
 
-  \quad Таким образом, проведённое исследование дополняет и расширяет
-  картину, описанную в [1]. Оно укрепляет базу, необходимую для перехода
-  на прикладной уровень: разработки более эффективных алгоритмов и создания
-  программных решений, лучше соответствующих специфике решаемых задач.
-  В будущем планируется сосредоточиться на подготовке образа тестовой системы
-  с ядром Linux и написании пакета для сбора метрик качества обработки задач
-  планирования.
-  В дальнейшем работа в рамках этой темы может пойти в различных направлениях:
-  от внесения инкрементальных патчей в CFS/EEVDF на основе показаний тест-пакета
-  до создания специализированных sched\_ext планировщиков,
-  построенных на продвинутых
-  алгоритмах для разнообразных прикладных задач
-\end{quote}
+    Код избегает сложных структур данных, полагаясь на примитивы dsq из
+    sched\_ext для повышения эффективности. Обработка ошибок
+    минимальна, с ранним возвратом при сбоях поиска в карте, что
+    обеспечивает базовую надежность.
+  \end{quote}
 
-\renewcommand{\bibname}{\large СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
-\begin{thebibliography}{9}
-  \vspace*{0.3cm}
-  \bibitem{1}
-  Павел Е. Шаго Отчет о научно-исследовательской работе: Планировщики б. и. 2024
-  \bibitem{2}
-  Павел Е. Шаго Отчет о научно-исследовательской работе: Планировщики 2 б. и.
-  2025
-  \bibitem{3}
-  Joseph Y-T. Leung\ Handbook of Scheduling: Algorithms, Models, and
-  Performance Analysis CRC Press 2004
-  \bibitem{4} Michelle Galin, Anna Hedblom Linux Kernel Scheduler Evaluation
-  for Performance-Critical Telecom Workloads Linköping University 2025
-  \bibitem{5} Jinsong Mao, Benjamin E. Ujcich, Shiqing Ma Rethinking Provenance
-  Completeness with a Learning-Based Linux Scheduler arXiv 2025
-  \bibitem{6} Xinbo Wang, Shian Jia, Ziyang Huang, Jing Cao, Mingli Song
-  Mixture-of-Schedulers: An Adaptive Scheduling Agent as a Learned Router for
-  Expert Policies arXiv 2025
-  \bibitem{7}
-  Ion Stoica, Hussein Abdel-Wahab Earliest Eligible Virtual Deadline First
-  : A Flexible and Accurate Mechanism for Proportional Share Resource Allocation
-  Old Dominion University 1996
+  \section{Итоги}
+  \begin{quote}
+    В результате разработан планировщик, обеспечивающий справедливое
+    распределение процессорного времени пропорционально весам задач
+    и гарантирующий низкую задержку для интерактивных рабочих нагрузок.
+    Анализ статистических счётчиков показывает эффективное использование
+    процессора как в режиме ожидания, так и при интенсивной нагрузке.
 
-  \iffalse
-  \bibitem{4} Tang Qinan, Gao Xing, Li Guilin, Lin Juncong Optimizing Linux
-  scheduling based on global runqueue with SCX IEEE International
-  Conference SMC 2024
+    Хотя этот прототип хорошо отражает суть EEVDF, существует множество
+    возможностей для его усовершенствования. Например, можно выбирать
+    виртуальное
+    время для каждого ядра с учетом его архитектуры (реализовать поддержку
+    гетерогенности для планирования) или настраивать планировщик под конкретные
+    задачи. Гибкость sched\_ext позволяет довольно просто реализовывать в
+    дальнейшем эти расширения.
 
-  \bibitem{6}
-  Jiacheng Xu, Dylan Wolff, Han Xing Yi, Jialin Li, Abhik Roychoudhury
-  Concurrency Testing in the Linux Kernel via eBPF arXiv 2025
-  \bibitem{7}
-  Andrew S. Tanenbaum, Herbert Bos\ MODERN OPERATING SYSTEMS Pearson
-  Education 2023
-  \bibitem{8}
-  Zhong, Shawn Wanxiang, Jing Liu, Andrea Arpaci-Dusseau, Remzi Arpaci-Dusseau
-  Revealing the Unstable Foundations of eBPF-Based Kernel Extensions Twentieth
-  European Conference on Computer Systems 2025
-  \bibitem{9}
-  Liz Rice Learning eBPF O’Reilly Media, Inc 2023
-  \bibitem{11}
-  Michael J. Morrison\ Resource Management and Scheduling
-  in Multitasking Operating Systems CRC Press 2017
-  \bibitem{12}
-  Daniel Hodges Scheduling at Scale : eBPF Schedulers with
-  Sched\_ext USENIX Association 2024
-  \bibitem{13}
-  Mores Konstantinos User-space guided memory management with eBPF
-  NTUA 2025
-  \bibitem{14}
-  Xiaobo Zheng, Zihao Duan, Shiyi Li, Haojun Hu, Wen Xia
-  F4: Fast, Flexible and stable-Fortified User-Space Thread Scheduling Framework
-  International Conference on Networking, Architecture and Storage IEEE 2024
-  \bibitem{15}
-  Saito Shogo, Kei Fujimoto Port contention aware task scheduling for
-  SIMD applications
-  IEEE Access 2024
-  \bibitem{16}
-  Feitong Qiao, Yiming Fang, Asaf Cidon Energy-Aware Process Scheduling in Linux
-  ACM SIGENERGY Energy Informatics 2024
-  \bibitem{17}
-  Torvalds L. Linux Kernel [Электронный ресурс] / L. Torvalds.
-  -- Режим доступа: \url{https://github.com/torvalds/linux} -- Дата обращения
-  15.04.2025.
-  \bibitem{18}
-  sched-ext/scx [Электронный ресурс]. -- Режим доступа: \\
-  \url{https://github.com/sched-ext/scx} -- Дата обращения 27.04.2025.
-  \bibitem{19}
-  lkml [Электронный ресурс]. -- Режим доступа: \url{https://lkml.org}
-  -- Дата обращения 20.04.2025.
-  %\bibitem{20}
-  %eBPF for windows [Электронный ресурс]. -- Режим доступа:
-  %\url{https://github.com/microsoft/ebpf-for-windows}
-  %-- Дата обращения 01.05.2025.
-  \bibitem{20}
-  lwn article 925371 [Электронный ресурс]. -- Режим доступа:
-  \url{https://lwn.net/Articles/925371}
-  -- Дата обращения 06.05.2025.
-  \bibitem{21}
-  Sungju Huh, Jonghun Yoo, Seongsoo Hong Analytical Evaluation of Linux
-  CFS Scheduler under Extreme Workload ITC-CSCC 2011
-  %\bibitem{20}
-  %S. A. Cook The complexity of theorem-proving procedures, in Procedings of the
-  %3rd Annual ACM Symposium on Theory of Computing, Association for Computing
-  %Machinery 1971
-  %\bibitem{21}
-  %M. R. Garey and D. S. Johnson, Computers and Intractability: A Guide to the
-  %Theory of NP-Completeness W. H. Freeman 1979
-  %\bibitem{22}
-  %R. M. Karp, Reducibility among combinatorial problems, in R. E. Miller and
-  %J. W. Thatcher (eds), Complexity of Computer Computations Plenum Press 1972
-  \fi
-\end{thebibliography}
+    Также на текущий момент тестирование эффективности в моей конфигурации
+    ограничивается общими тестами производительности GeekBench, Passmark и
+    выводом локальных метрик всех ядер (из карт eBPF).
 
-\end{document}
+    Полный код и инструкции по развертыванию можно получить в репозитории
+    [8].
+  \end{quote}
+
+  \newpage
+  \section{Направления дальнейшей работы}
+  \begin{quote}
+    Остается довольно много задач для достижения конечных целей,
+    включая:
+    \begin{itemize}
+      \item разработку тестового пакета для оценки эффективности
+      \item определение переменных, параметров и ограничений
+      \item построение специализированной математической модели
+      \item создание алгоритма на базе модели
+      \item реализация полученного алгоритма
+    \end{itemize}
+  \end{quote}
+
+  %\chapter{Матмодель задачи}
+
+  \chapter*{Заключение}
+  \begin{quote}
+    \quad В данной работе получены основополагающие для дальнейшей работы
+    результаты. Успешно реализован алгоритм планирования EEVDF с использованием
+    инфраструктуры sched\_ext, углублена и обновлена научная
+    экспертиза в аналогичных
+    решениях которые появились за последние полгода.
+    Продолжающееся развитие данной области показывает, что решаемые проблемы
+    актуальны и востребованы.
+
+    \quad В настоящей работе осознанно опущено развернутое обсуждение
+    значимости разработки
+    более эффективных алгоритмов планирования, где это допустимо ограничениями
+    формата. Такое решение обусловлено рядом причин. Во-первых, с момента
+    публикации работ [1] и [2] не произошло принципиальных изменений
+    в оценке актуальности
+    рассматриваемой темы, которая по-прежнему сохраняет высокую
+    значимость, вследствие чего
+    повторение ранее приведённых обоснований представляется
+    избыточным. Во-вторых, данное
+    исследование следует рассматривать как логическое продолжение предыдущих
+    частей, в связи с чем акцент на значимости темы целесообразно
+    сместить в заключение.
+
+    \quad Выход на рынок большего количества процессоров с
+    гетерогенной компоновкой делает
+    решаемую проблему все более актуальной.
+    Современные задачи, включая обеспечение предсказуемых задержек,
+    адаптацию к разнородным
+    рабочим нагрузкам и поддержку гетерогенной архитектуры
+    современных вычислительных платформ,
+    требуют применения всё более точных и адаптивных решений. В связи
+    с этим исследования
+    в данной области способствуют не только совершенствованию
+    существующих реализаций,
+    но и создают предпосылки для разработки новых, более
+    универсальных и надёжных планировщиков.
+
+    \quad Таким образом, проведённое исследование дополняет и
+    расширяет результаты,
+    представленные в работах [1] и [2]. Полученные выводы позволяют смело
+    переходить от описательного и экспериментального уровня к формальному
+    математическому моделированию планировщика и разработке алгоритмов,
+    ориентированных на гетерогенные вычислительные системы с
+    разнородными ресурсами и нагрузками.
+
+    \quad В дальнейшей работе планируется реализация тестового пакета,
+    предназначенного для воспроизводимого сбора и анализа метрик
+    качества планирования.
+    Наличие такого инструментария позволит валидировать
+    разрабатываемые модели и алгоритмы,
+    сопоставляя теоретические результаты с практическим поведением системы.
+  \end{quote}
+
+  \renewcommand{\bibname}{\large СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
+  \begin{thebibliography}{9}
+    \vspace*{0.3cm}
+    \bibitem{1}
+    Павел Е. Шаго Отчет о научно-исследовательской работе:
+    Планировщики б. и. 2024
+    \bibitem{2}
+    Павел Е. Шаго Отчет о научно-исследовательской работе: Планировщики 2 б. и.
+    2025
+    \bibitem{3}
+    Joseph Y-T. Leung\ Handbook of Scheduling: Algorithms, Models, and
+    Performance Analysis CRC Press 2004
+    \bibitem{4} Michelle Galin, Anna Hedblom Linux Kernel Scheduler Evaluation
+    for Performance-Critical Telecom Workloads Linköping University 2025
+    \bibitem{5} Jinsong Mao, Benjamin E. Ujcich, Shiqing Ma
+    Rethinking Provenance
+    Completeness with a Learning-Based Linux Scheduler arXiv 2025
+    \bibitem{6} Xinbo Wang, Shian Jia, Ziyang Huang, Jing Cao, Mingli Song
+    Mixture-of-Schedulers: An Adaptive Scheduling Agent as a Learned Router for
+    Expert Policies arXiv 2025
+    \bibitem{7}
+    Ion Stoica, Hussein Abdel-Wahab Earliest Eligible Virtual Deadline First
+    : A Flexible and Accurate Mechanism for Proportional Share
+    Resource Allocation
+    Old Dominion University 1996
+    \bibitem{8} A1349 Pavel Shago [Электронный ресурс].
+    -- Режим доступа: \url{https://github.com/shgpavel/A1349} -- Дата обращения
+    16.12.2025.
+    \bibitem{9} Andrew S. Tanenbaum, Herbert Bos\ MODERN OPERATING
+    SYSTEMS Pearson
+    Education 2023
+    \bibitem{10}
+    Liz Rice Learning eBPF O’Reilly Media, Inc 2023
+    \bibitem{11}
+    Torvalds L. Linux Kernel [Электронный ресурс] / L. Torvalds.
+    -- Режим доступа: \url{https://github.com/torvalds/linux} -- Дата обращения
+    04.12.2025.
+    \bibitem{12}
+    sched-ext/scx [Электронный ресурс]. -- Режим доступа: \\
+    \url{https://github.com/sched-ext/scx} -- Дата обращения 07.12.2025.
+    \bibitem{13}
+    lkml [Электронный ресурс]. -- Режим доступа: \url{https://lkml.org}
+    -- Дата обращения 24.11.2025.
+  \end{thebibliography}
+
+  \end{document}
